tenant1/apis/customer-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-app-v2
  namespace: tenant1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-app-v2
  template:
    metadata:
      labels:
        app: customer-app-v2
        api: customers
    spec:
      containers:
        - name: api
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "32Mi"
              cpu: "50m"
          image: newa/api-server:v2.0.4
          args: ["-data", "/api/api.json", "-openapi", "/public/openapi.yaml"]
          imagePullPolicy: Always
          volumeMounts:
          - name: api-data
            mountPath: /api
          - name: openapi
            mountPath: /public
      volumes:
        - name: api-data
          configMap:
            name: customer-data-v2
        - name: openapi
          configMap:
            name: customer-v2-apispec
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: api
                      operator: In
                      values:
                        - customers
                topologyKey: kubernetes.io/hostname
              weight: 100

---
apiVersion: v1
kind: Service
metadata:
  name: customer-app-v2
  namespace: tenant1
  labels:
    app: customer-app-v2
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: api
  selector:
    app: customer-app-v2
