tenant1/apis/customers-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers
  namespace: tenant1
  annotations:
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.tenant1.dbl25tst3w18.mageekbox.eu`) && PathPrefix(`/customers`)
      services:
        - name: customer-app
          port: 3000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers-v2
  namespace: tenant1
  annotations:
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v2
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.tenant1.dbl25tst3w18.mageekbox.eu`) && PathPrefix(`/customers/v2`)
      services:
        - name: customer-app-v2
          port: 3000
  tls: {}
